Added useful flutter command docs